src/styles/Shop.css
.shop-items {
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(auto-fit, minmax(360px, 400px));
    gap: 5px;
    margin-top: 40px;
}

.item-card {
    padding: 10px;
    border-radius: 2px;
    margin: 0px 5px;
    background-color: #fffc;
    display: grid;
    justify-items: center;
    align-items: center;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 50px 30px 80px;
    grid-template-areas: "name  img"
                         "price img"
                         "btn   img";
                         
}
.item-card > * {
    margin: 12px 0;
    flex-grow: 1;
}

.item-card a {
    grid-area: name;
    text-decoration: none;
    color: #111;
}
.item-card img {
    grid-area: img;
    background: linear-gradient(to bottom right, #0005, #0003);
    width: 100%;
    max-width: 230px;
    margin: 10px;
}
.item-card p {
    grid-area: price;
}
.add-to-cart {
    grid-area: btn;
    align-self: end;
    user-select: none;
    font-size: 15px;
    letter-spacing: 2px;
    padding: 10px;
    background-color: #ffa42c;
    border-radius: 8px;
    border: none;
}
.add-to-cart:hover {
    background-color: #f7b853;
}
.add-to-cart:active {
    background-color: #fbb13b;
}

@media (max-width: 520px) {
    .item-card {
        grid-template-columns: 100%;
        grid-template-rows: 170px 50px 30px 70px;
        grid-template-areas: "img"
                             "name"
                             "price"
                             "btn";
    }
}

